--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,15 +30,6 @@
       pointer-events: none;
       z-index: 1;
     }
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: transparent;
-      z-index: 2;
-    }
     .controls {
       position: absolute;
       bottom: 10px;
@@ -46,31 +38,35 @@
       display: flex;
       justify-content: center;
       gap: 10px;
-      z-index: 3;
+      z-index: 30;
       pointer-events: auto;
     }
     .control-btn {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(76, 29, 149, 0.7);
       color: white;
       border: none;
-      padding: 10px;
-      border-radius: 50%;
+      padding: 12px 14px;
+      border-radius: 9999px;
+      font-size: 18px;
       cursor: pointer;
+      box-shadow: 0 0 10px rgba(128, 90, 213, 0.6);
+      transition: transform 0.2s ease;
+    }
+    .control-btn:hover {
+      transform: scale(1.1);
     }
     .theme-button {
-      cursor: pointer;
-      padding: 6px 12px;
-      border-radius: 6px;
       background-color: #2d2d2d;
       color: white;
-    }
-    #themeList {
-      display: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body class="bg-[#0b0f1a] text-white">
 <div class="max-w-5xl mx-auto px-4 py-6">
+
   <!-- Header -->
   <header class="flex flex-col sm:flex-row sm:items-center justify-between mb-6">
     <h1 class="text-3xl font-bold text-purple-400">Wind Breaker - Season 1</h1>
@@ -78,31 +74,62 @@
       <a href="index.2.html" class="theme-button">← Go Back</a>
       <a href="support.html" class="theme-button">Support Us</a>
     </div>
-  </header>  <!-- Theme Selector -->  <div class="mb-4">
-    <button onclick="toggleThemes()" class="theme-button">Choose Theme</button>
-    <div id="themeList" class="mt-2 grid grid-cols-2 gap-2">
-      <button onclick="setTheme('bg-[#0b0f1a]')" class="theme-button">AniWatch Dark</button>
-      <button onclick="setTheme('bg-gray-900')" class="theme-button">Classic Dark</button>
+  </header>
+
+  <!-- Theme Selector -->
+  <div class="relative inline-block text-left mb-6">
+    <button onclick="toggleThemes()" class="theme-button flex items-center gap-2 hover:bg-purple-700 transition px-4 py-2 rounded-md shadow">
+      🎨 Choose Theme
+      <svg class="w-4 h-4 transform transition-transform duration-200" id="themeArrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+      </svg>
+    </button>
+
+    <div id="themeList" class="absolute z-50 mt-2 w-52 origin-top-right bg-[#1e1e2f] border border-gray-700 rounded-xl shadow-lg ring-1 ring-black ring-opacity-5 transition duration-300 hidden">
+      <div class="py-2 px-2">
+        <button onclick="setTheme('bg-[#0b0f1a]')" class="block w-full text-left px-4 py-2 rounded-md text-white hover:bg-purple-700 transition">AniWatch Dark</button>
+        <button onclick="setTheme('bg-gray-900')" class="block w-full text-left px-4 py-2 rounded-md text-white hover:bg-purple-700 transition">Classic Dark</button>
+        <button onclick="setTheme('bg-black')" class="block w-full text-left px-4 py-2 rounded-md text-white hover:bg-purple-700 transition">Deep Black</button>
+      </div>
     </div>
-  </div>  <!-- Search -->  <input type="text" id="searchBox" oninput="searchEpisodes()" placeholder="Search episodes..." class="w-full p-2 mb-4 bg-gray-800 text-white rounded" />  <!-- Video Player -->  <div id="videoWrapper" class="video-container rounded-xl shadow-lg overflow-hidden relative">
+  </div>
+
+  <!-- Search -->
+  <input type="text" id="searchBox" oninput="searchEpisodes()" placeholder="Search episodes..." class="w-full p-2 mb-4 bg-gray-800 text-white rounded" />
+
+  <!-- Video Player -->
+  <div id="videoWrapper" class="video-container rounded-xl shadow-lg overflow-hidden relative group">
     <iframe id="videoPlayer" src="https://www.youtube.com/embed/ne0Y0vyjxpE?autoplay=1&rel=0&modestbranding=1&controls=1&fs=1" frameborder="0" allowfullscreen allow="autoplay; fullscreen"></iframe>
-    <div class="overlay" onclick="window.open('https://sawutser.top/4/9278457', '_blank')"></div>
+    <a href="https://sawutser.top/4/9278457" target="_blank" class="absolute top-0 left-0 w-full h-full z-20 bg-transparent" style="pointer-events: auto;"></a>
     <div class="controls">
-      <button class="control-btn" onclick="seek(-15)">⏪ 15s</button>
+      <button class="control-btn" onclick="seek(-15)">⏪</button>
       <button class="control-btn" onclick="togglePlayPause()">▶️ / ⏸️</button>
-      <button class="control-btn" onclick="seek(15)">15s ⏩</button>
+      <button class="control-btn" onclick="seek(15)">⏩</button>
       <button class="control-btn" onclick="toggleFullscreen()">⛶</button>
     </div>
-  </div>  <!-- Description -->  <div class="mt-4 bg-gray-800 p-4 rounded-lg">
+  </div>
+
+  <!-- Description -->
+  <div class="mt-4 bg-gray-800 p-4 rounded-lg">
     <h2 class="text-xl font-semibold mb-1">About Wind Breaker</h2>
     <p>
       Haruka Sakura joins Furin High known for its fighting students who protect their town.
       This anime blends street fights with emotional growth and team spirit.
     </p>
-  </div>  <!-- Episodes -->  <div id="episodeList" class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>  <!-- Footer -->  <footer class="mt-10 text-sm text-center text-gray-400">
+  </div>
+
+  <!-- Episodes -->
+  <div id="episodeList" class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>
+
+  <!-- Footer -->
+  <footer class="mt-10 text-sm text-center text-gray-400">
     <p>Thanks to the original creators of <strong>Wind Breaker</strong>. Please support the official release.</p>
   </footer>
-</div><script>
+
+</div>
+
+<!-- JavaScript -->
+<script>
   const episodes = [
     { title: "Episode 1", link: "https://www.youtube.com/embed/ne0Y0vyjxpE" },
     { title: "Episode 2", link: "https://www.youtube.com/embed/J2568cnOa1g" },
@@ -136,7 +163,15 @@
 
   function toggleThemes() {
     const tList = document.getElementById("themeList");
-    tList.style.display = tList.style.display === "grid" ? "none" : "grid";
+    const arrow = document.getElementById("themeArrow");
+    const isOpen = tList.classList.contains("hidden");
+    if (isOpen) {
+      tList.classList.remove("hidden");
+      arrow.classList.add("rotate-180");
+    } else {
+      tList.classList.add("hidden");
+      arrow.classList.remove("rotate-180");
+    }
   }
 
   function setTheme(themeClass) {
@@ -177,9 +212,12 @@
 
   (function applySavedTheme() {
     const saved = localStorage.getItem("theme");
-    if (saved) document.body.className = saved + " text-white";
+    if (saved) {
+      document.body.className = saved + " text-white";
+    }
   })();
 
   loadEpisodes();
-</script></body>
+</script>
+</body>
 </html>
